# greektax

./: .cpanel.yml  .env.example  .gitignore  CLAUDE.md  README.md  Requirements.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.js  vitest.config.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  claude-code-review.yml  deploy-backend.yml
docs/: api_contract.md  architecture.md  cleanup_simplification_plan.md  contributing.md  documentation_style.md  i18n.md  operations.md  performance_baseline.md  project_plan.md  ui_improvement_plan.md
docs/archive/: README.md  documentation_audit.md
docs/manual_tests/: tax_residency_transfer_ui.md
docs/reference/: config_schema_design_notes.md  configuration_inventory.md  employment_tax_credit_2026.md  frontend_modularisation_notes.md
scripts/: check_bundle_size.py  configure_frontend.py  embed_translations.py  performance_snapshot.py  quality.py  sync_requirements.py  validate_config.py  validate_translations.py
src/: __init__.py
src/frontend/: index.html
src/greektax/: __init__.py
tests/: apiClient.test.js  conftest.py  dom.test.js  localisation.test.js  setup.js  theming.test.js
tests/config/: test_validator.py
tests/data/: regression_scenarios.json
tests/e2e/: README.md  test_smoke_flow.py
tests/frontend/: apiBaseResolution.test.js  computeDistributionTotals.test.js  declarationsAst.test.js  fileSizeGuardrails.test.js  persistenceOptIn.test.js  plotlyScriptPolicy.test.js  test_frontend_translations.py
tests/integration/: test_calculation_endpoint.py  test_config_endpoints.py  test_cors.py  test_frontend_preview.py  test_frontend_shell.py  test_health_endpoint.py  test_legacy_paths.py  test_passenger_wsgi.py  test_request_limits.py  test_security_headers.py  test_summaries_endpoints.py  test_translations_endpoint.py
tests/unit/: test_calculation_regressions.py  test_calculation_service.py  test_configure_frontend.py  test_localization_catalog.py  test_request_parser.py  test_response_builder.py  test_share_service.py  test_version.py  (+1 more)
(+61 files in other folders)
