[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greektax"
version = "0.1.0"
description = "Unofficial Greek tax estimation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GreekTax Contributors" }]
dependencies = [
    "Flask>=3.0.0",
    "PyYAML>=6.0",
    "fpdf2>=2.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = "-ra"

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "PL", "UP"]

[tool.ruff.lint]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
packages = ["src"]
