[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greektax"
version = "0.6.2"
description = "Unofficial Greek tax estimation toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "GreekTax Contributors" }]
dependencies = [
    "Flask>=3.0.0",
    "Flask-Cors>=4.0.0",
    "PyYAML>=6.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = [
    "tests",
]
addopts = "-ra"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "PL", "UP"]
ignore = [
    "E501",  # Long-form documentation and tests prefer natural wrapping.
    "PLR0912",  # Complex business rules are documented within functions.
    "PLR0915",
    "PLR2004",
    "UP006",
    "UP035",
    "UP045",
]

[tool.mypy]
python_version = "3.10"
strict = false
packages = ["src"]
ignore_missing_imports = true
